# Python_Project_Trump_Speech_Analysis

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
_RENDU FINAL/: Final_Notebook.ipynb
data/: cached_lm_GPT2Tokenizer_128_temp_val_trump.txt  other_candidate.db  temp_val_trump.txt
explanations/: STEP1_SPEECH_SCRAPING_PROCESS.md  STEP2_CLEANING.md  STEP3_FILTERING_CORPUS.md  corpus_modularity.md
notebooks/: Biden_and_Kamala.ipynb  Final_Notebook.ipynb  Nico_test_db.ipynb  most-used-words.ipynb  speech_level_quality.ipynb  test_soup.ipynb  title_analysis.ipynb
notebooks/NLP/: 01_ngrams.ipynb  02_lstm_training.ipynb  03_transformer_generation.ipynb  char_rnn_training.ipynb  char_rnn_trump.pth  exoclean.ipynb  tfidf_analysis.ipynb  tfidf_analysis_v2.ipynb
notebooks/Polymarket/: kennedy_center_honors_prediction.ipynb  polymarket-hanukkah-bet.ipynb
scripts/: export_cleaned_tokens.py  init_db.py  process_speeches.py  speech_url_scrap.py  train_transformer.py
scripts/archive/: convert_to_parquet.py  inspect_categories.py  update_location.py
scripts/cleaning/: check_parquet.py  clean_transcriptions.py  run_cleaning_v1.py  run_pipeline.py  test_unit.py  verify_cleaning_logic.py  verify_fix.py
scripts/plot_figures/: speech_quality_analysis.py
src/app/: analysis.py  category_mapping.py  data.py  filters.py  map_viz.py  visualizations.py  word_tracker.py
src/filtering_corpus/: other_candidates.py  speech_corpus.py
src/nlp/: data_loader.py
src/parquet/: convert.py
src/rollcall/: scroller.py  (+7 more)
tests/: test_cleaning_v1.py  test_readability.py
(+2 files in other folders)
